fix: prettier endOfLine

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,11 @@
     "consistent-return": "off",
     "no-param-reassign": "off",
     "no-use-before-define": "off",
-    "prettier/prettier": "error",
+    "prettier/prettier": ["error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "react-hooks/exhaustive-deps": "warn",
     "react-hooks/rules-of-hooks": "error",
     "react/jsx-props-no-spreading": "off",
