--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "classnames": "^2.3.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-native-nav": "^2.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
@@ -56,6 +60,7 @@
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "sass": "^1.50.0"
   }
 }
