--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
