--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,13 +20,15 @@
   },
   "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
   "rules": {
+    "jsx-a11y/label-has-associated-control": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-use-before-define": "off",
     "camelcase": "off",
     "consistent-return": "off",
     "no-param-reassign": "off",
     "no-use-before-define": "off",
-    "prettier/prettier": ["error",
+    "prettier/prettier": [
+      "error",
       {
         "endOfLine": "auto"
       }
