--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-icons": "^4.1.0",
     "react-native-nav": "^2.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
